<resources>
    <string name="app_name">BicycleRental</string>

    <string name="title_section1">Section 1</string>
    <string name="title_section2">Section 2</string>
    <string name="title_section3">Section 3</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_example">Example action</string>
    <string name="menu_rental">我要租车</string>
    <string name="menu_collect">我的收藏</string>
    <string name="menu_syssetting">系统设置</string>
    <string name="action_settings">Settings</string>
    <string name="checkversion">检测新版本</string>
    <string name="feedback">问题反馈</string>
    <string name="contactus">联系我们</string>
    <string name="exit">注销</string>
    <string name="your_feedback">您的问题和建议</string>
    <string name="update">更新</string>
    <string name="cancel">取消</string>
    <string name="is_latest_version">当前已经是最新版本</string>
    <string name="find_new_version">发现新版本</string>
    <string name="recyclerview_loadmore">加载更多...</string>
    <string name="recyclerview_noloadmore">没有更多</string>
    <string name="no_more_class">没有更多学校和班级信息了</string>
    <string name="first_sign">个性签名：这个人很懒，什么都没留下</string>
    <!--register&login-->
    <string name="write_used_pwd">请输入原密码</string>
    <string name="write_new_pwd">请输入新密码</string>
    <string name="changepwd">修改密码</string>
    <string name="register">注册</string>
    <string name="phone">手机号</string>
    <string name="password">密码</string>
    <string name="auth_code">验证码</string>
    <string name="get_authcode">获取验证码</string>
    <string name="phone_register">手机注册</string>
    <string name="register_msg">注册表示您同意服务协议和隐私条款</string>
    <string name="register_countdown">秒后可再次发送</string>
    <string name="auth">验证</string>
    <string name="forget_password">忘记密码</string>
    <string name="login">登录</string>
    <string name="login_hint_phone">手机号</string>
    <string name="login_hint_studentnum">学籍号</string>
    <string name="lose_phone">手机号弃用</string>
    <string name="forget_hint">请输入您当时注册的手机号</string>
    <string name="forget_phone_hint_before">已向您的手机</string>
    <string name="forget_phone_hint_after">发送验证短信，请注意查收</string>
    <string name="finish_auth">已完成验证</string>
    <string name="reset_pwd">重置密码</string>
    <string name="people_review">找回密码</string>
    <string name="edit_error">输入格式错误！</string>
    <string name="password_error">密码为6-16位</string>
    <string name="auth_msg_before">已向您的</string>
    <string name="auth_phone_msg_after">手机发送验证短信</string>
    <string name="set_password">新密码</string>
    <string name="finish">完成</string>
    <string name="review_current_phone">您现在的手机（必填项）</string>
    <string name="review_ago_phone">曾经用作登录的手机（必填项）</string>
    <string name="review_major">专业</string>
    <string name="review_grade">年级</string>
    <string name="review_studentno">学号</string>
    <string name="review_name">姓名</string>
    <string name="register_studentid">学号</string>
    <string name="register_name">真实姓名</string>

    <string name="sms_error">smssdk_network_error</string>
</resources>
